turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:5: error: not found: value color
	for (c <- 0 to color.length-1)
                       ^